--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body{background-image: url(ps3.png);
-background-attachment: fixed;background-size:  100%;}
+background-attachment: fixed;background-size:100% 100% ;}
 center{display: block;margin-left:
 auto;margin-right: auto;}
 </style>
@@ -17,7 +17,7 @@ auto;margin-right: auto;}
 <br>
 <br>
 <br>
-<div style='font-size:35px;color: rgb(255, 255, 255);'>Created by :<font} color= red>Mohamed Gaber</h4>
+<div style='font-size:35px;color: #ff0000;'>Created by :<font color= red>Mohamed Gaber</h4>
 <hr>
 <div</h3>
 
