--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body{background-image: url(ps3.png);
-background-attachment: fixed;background-size:100% 100% ;}
+background-size:100% 100% ;}
 center{display: block;margin-left:
 auto;margin-right: auto;}
 </style>
