--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-body{background-image: url(ps3.png);background-size:100% 100% ;
+body{background-color: black;
 }
 center{display: block;margin-left:
 auto;margin-right: auto;}
